--- a/public/css/style.css
+++ b/public/css/style.css
@@ -128,6 +128,7 @@ nav.navbar {
     align-items: center;
     color: var(--color0);
     z-index: 1;
+    margin: 5% 10%;
 }
 
 nav.navbar a.logo img {
@@ -150,6 +151,8 @@ nav.navbar ul.menu-list li a {
     color: var(--color0);
     text-decoration: none;
     transition: all .3s linear;
+    font-weight: 600;
+    font-size: 20px;
 }
 
 nav.navbar ul.menu-list li a i {
@@ -166,7 +169,7 @@ nav.navbar ul.submenu {
     position: absolute;
     top: 64px;
     visibility: hidden;
-    width: 200px;
+    width: 230px;
     transition: all .3s linear;
 }
 
@@ -428,12 +431,18 @@ section#serice {
     text-align: center;
 }
 
+.service-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 30px;
+    padding-top: 4rem;
+}
+
 .item-service {
     display: flex;
     flex-direction: column;
     height: 380px;
     box-shadow: 0px 10px 50px #0000000f;
-    margin: 30px;
 }
 
 .item-service:hover img {
