--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,76 @@
     padding: 0;
 }
 
+.custom-package {
+    box-shadow: 4px 4px 50px #00000017;
+    display: flex;
+    justify-content: space-between;
+    padding: 4% 10%;
+    align-items: flex-start;
+}
+
+.custom-package h4 span {
+    display: block;
+    font-size: 20px;
+    font-weight: 100;
+}
+
+.custom-package h4 {
+    text-align: left;
+    font-size: 3rem;
+    color: var(--color3);
+}
+
+section#package .container .package-item .features {
+    display: flex;
+    flex-direction: column;
+    grid-gap: 4px;
+    align-items: center;
+}
+
+section#package .container .package-item:nth-child(2) a.btn {
+    background-color: #1e93e9;
+}
+
+section#package .container .package-item:nth-child(2) a.btn:hover {
+    background: var(--color2);
+}
+
+section#package .container .package-item .features ul li {
+    border-bottom: 1px solid #0367b047;
+    list-style: none;
+    padding: 20px;
+    font-size: 18px;
+}
+
+section#package .container .package-item:nth-child(2) .features ul li {
+    border-color: #ffffff40;
+}
+
+section#package .container .package-item .price h4 {
+    font-size: 45px;
+    color: var(--color3);
+}
+
+section#package .container .package-item:nth-child(2) .price h4 {
+    color: var(--color0);
+}
+
+section#package .container .package-item .price sup {
+    font-size: 18px;
+    margin: 0 10px;
+    font-weight: 100;
+}
+
+section#package .container .package-item .top {
+    line-height: 1.4;
+    font-size: 20px;
+}
+
+section#package .container .package-item .top h3 {
+    font-size: 30px;
+}
+
 a {
     text-decoration: none;
 }
@@ -24,6 +94,10 @@ body {
     letter-spacing: var(--letter-spacing);
     font-size: 18px;
     position: relative;
+}
+
+.text-bloc {
+    width: 50%;
 }
 
 .popup {
@@ -98,6 +172,57 @@ a.btn-more {
 
 section {
     padding: 4% 15%;
+    position: relative;
+}
+
+section#package {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: center;
+    text-align: center;
+}
+
+section#package .container .package-item {
+    box-shadow: 10px 10px 50px #0000000f;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    min-height: 400px;
+    grid-gap: 30px;
+    width: 400px;
+}
+
+section#package .container .package-item:nth-child(2) {
+    background: var(--color1);
+    color: var(--color0);
+}
+
+section#package .container {
+    display: flex;
+    padding: 3rem 0;
+    grid-gap: 25px;
+    justify-content: space-between;
+    align-items: stretch;
+}
+
+section#steps {
+    background: aliceblue;
+}
+
+section#steps .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-gap: 40px;
+    padding-top: 4rem;
+}
+
+section#about\ atout {
+    display: flex;
+    grid-gap: 51px;
 }
 
 
@@ -128,7 +253,8 @@ nav.navbar {
     align-items: center;
     color: var(--color0);
     z-index: 1;
-    margin: 5% 10%;
+    margin: 4% 12%;
+    height: 90px;
 }
 
 nav.navbar a.logo img {
@@ -151,7 +277,6 @@ nav.navbar ul.menu-list li a {
     color: var(--color0);
     text-decoration: none;
     transition: all .3s linear;
-    font-weight: 600;
     font-size: 20px;
 }
 
@@ -195,7 +320,7 @@ nav.navbar a.tel {
     align-items: center;
     justify-content: center;
     line-height: 1.5;
-    padding: 0 20%;
+    padding: 0 12%;
     text-align: center;
     color: var(--color0);
     position: relative;
@@ -215,7 +340,7 @@ nav.navbar a.tel {
 .banner a.scroll {
     position: relative;
     color: var(--color0);
-    top: 80px;
+    top: 70px;
     background: #f1f9ff2e;
     width: 50px;
     height: 50px;
@@ -276,12 +401,12 @@ main .accroche {
     grid-gap: 30px;
     align-items: center;
     justify-content: center;
-    padding: 20px 15%;
+    padding: 20px 12%;
     position: relative;
     top: -100px;
 }
 
-main .accroche .bloc {
+.bloc {
     display: flex;
     align-items: flex-start;
     grid-gap: 15px;
@@ -289,6 +414,26 @@ main .accroche .bloc {
     box-shadow: 4px 4px 50px #00000017;
     padding: 30px;
     border-bottom: 4px solid var(--color1);
+    position: relative;
+}
+
+.bloc .description {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    grid-gap: 2px;
+}
+
+.bloc .step {
+    position: absolute;
+    right: 9px;
+    top: -80px;
+    font-weight: bold;
+    font-size: 8rem;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: var(--color1);
+    opacity: .2;
 }
 
 main .accroche .bloc .description {
@@ -297,7 +442,7 @@ main .accroche .bloc .description {
     align-items: flex-start;
 }
 
-main .accroche .bloc img {
+.bloc img {
     width: 25px;
 }
 
@@ -315,7 +460,7 @@ main .accroche .bloc h3 {
     font-size: 25px;
 }
 
-main .accroche .bloc span {
+.bloc span {
     opacity: .8;
     font-size: 16px;
 }
@@ -328,11 +473,13 @@ section#about {
 
 .img-bloc {
     width: 50%;
+    overflow: hidden;
 }
 
 .img-bloc img {
-    height: 500px;
-    width: auto;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 
 .title span {
@@ -362,8 +509,8 @@ section#about {
     display: flex;
     align-items: flex-start;
     grid-gap: 14px;
-    margin: 40px 0;
-    box-shadow: 4px 4px 50px #00000017;
+    margin: 25px 0px 0px;
+    box-shadow: 0px 4px 60px #00000017;
 }
 
 span.videoPlay {
@@ -488,7 +635,45 @@ section#serice {
 
 /* end slick slider*/
 
+section#advice{display: flex;flex-direction: column;align-items: center;justify-content: center;background: url(../assets/young-african-american-businessman-making-phone-call-indoors-in-office-at-night.jpg);background-size: cover;padding: 5% 10% 20%;background-position: center;margin-bottom: 12rem;}
 
+section#advice .bloc .description h3 {
+    font-size: 35px;
+}
+
+section#advice .bloc .description span {
+    color: var(--color3);
+    font-size: 20px;
+    opacity: 1;
+}
+
+section#advice .twice {
+    position: absolute;
+    top: 80%;
+    display: flex;
+    grid-gap: 30px;
+    padding: 0 20%;
+}
+
+section#advice .title {
+    text-align: center;
+    color: var(--color0);
+}
+
+section#advice .title p {
+    font-size: 25px;
+    color: #c2c2c2;
+}
+
+section#advice .title a.btn {
+    top: 70px;
+    position: relative;
+}
+
+section#advice .title h2 {
+    font-size: 5rem;
+    color: var(--color0);
+}
 /* end main style */
 
 
