--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Mukta:wght@300;800&display=swap');
-:root {
+ :root {
     --font: Mukta;
     --color0: #fff;
     --color1: #0367B0;
@@ -13,7 +13,11 @@
     margin: 0;
     padding: 0;
 }
-.skiptranslate iframe{display: none;}
+
+.skiptranslate iframe {
+    display: none;
+}
+
 .custom-package {
     box-shadow: 4px 4px 50px #00000017;
     display: flex;
@@ -98,9 +102,21 @@ a.btn {
     transition: all .3s linear;
     color: var(--color0);
     text-decoration: none;
+    text-wrap: nowrap;
+    -webkit-text-wrap: nowrap;
+    -O-text-wrap: nowrap;
+    -moz-text-wrap: nowrap;
 }
-a.btn i{padding-left: 5px;transition: all .3s linear;}
-a.btn:hover i{padding-left: 12px;}
+
+a.btn i {
+    padding-left: 5px;
+    transition: all .3s linear;
+}
+
+a.btn:hover i {
+    padding-left: 12px;
+}
+
 a.btn:hover,
 .btn:hover {
     background-color: var(--color2);
@@ -208,6 +224,11 @@ nav.navbar {
     transition: margin .3s linear;
 }
 
+#menubar,
+#menu {
+    display: none;
+}
+
 .fixed {
     margin: 0 !important;
     width: 100% !important;
@@ -240,6 +261,7 @@ nav.navbar ul.menu-list li a {
 
 nav.navbar ul.menu-list li a i {
     font-size: 15px;
+    margin: 0 10px;
 }
 
 nav.navbar ul.menu-list li a:hover {
@@ -270,6 +292,11 @@ nav.navbar a.tel {
     text-decoration: none;
     color: var(--color0);
     word-spacing: 2px;
+}
+
+nav.navbar a.tel i {
+    margin-right: 10px;
+    color: var(--color2);
 }
 
 .banner {
@@ -358,7 +385,7 @@ header video {
 main .accroche {
     display: flex;
     grid-gap: 30px;
-    align-items: center;
+    align-items: stretch;
     justify-content: center;
     padding: 20px 12%;
     position: relative;
@@ -423,6 +450,7 @@ main .accroche .bloc h3 {
     opacity: .8;
     font-size: 16px;
 }
+
 .custom-package h4 span {
     display: block;
     font-size: 20px;
@@ -484,6 +512,7 @@ section#package .container .package-item .top {
 section#package .container .package-item .top h3 {
     font-size: 30px;
 }
+
 section#about {
     display: flex;
     padding: 4% 15%;
@@ -681,7 +710,7 @@ section#advice .bloc .description span {
 
 section#advice .twice {
     position: absolute;
-    top: 80%;
+    top: 85%;
     display: flex;
     grid-gap: 30px;
     padding: 0 20%;
@@ -724,7 +753,9 @@ section#Testimony .testimonial {
 section#Testimony .title h2 {
     color: var(--color0);
 }
-section#Testimony q{}
+
+section#Testimony q {}
+
 section#faq {
     display: flex;
     grid-gap: 40px;
@@ -762,7 +793,10 @@ section#faq div.content {
 section#faq input[type='checkbox']:checked+div.content {
     display: block;
 }
+
+
 /* end main style */
+
 
 /* begin footer style */
 
@@ -898,7 +932,9 @@ footer section:nth-child(1) .group {
     height: 350px;
 }
 
-footer section:nth-child(1) .group:last-child {border: none;}
+footer section:nth-child(1) .group:last-child {
+    border: none;
+}
 
 .group .rs {
     display: flex;
@@ -934,9 +970,280 @@ footer section:nth-child(1) .group ul li a:hover {
     color: var(--color2);
 }
 
+
 /* end footer style */
 
-@media (max-width: 1024px) {
-    .banner h1{font-size: 4rem;}
-    .banner{padding: 0 15%;}
+
+/* R E S P O N S I V E */
+
+
+/* 320px — 480px: Mobile devices 
+481px — 768px: iPads, Tablets 
+769px — 1024px: Small screens, laptops 
+1025px — 1200px: Desktops, large screens 
+1201px and more — Extra large screens, TV */
+
+@media (max-width: 1400px) {
+    .banner h1 {
+        font-size: 3rem;
+    }
+    .banner {
+        padding: 0 15%;
+    }
+    main .accroche {
+        padding: 0 2%;
+        grid-gap: 10px;
+    }
+    section#about,
+    section {
+        padding: 4% 5%;
+    }
+    section#advice .twice {
+        padding: 0 12%;
+    }
+    footer .bande2 {
+        padding: 0;
+    }
+    footer section:nth-child(1) {
+        padding: 5% 2% 8%;
+    }
 }
+
+@media (max-width: 1200px) {
+    header {
+        height: 90vh;
+    }
+    .banner {
+        height: 82vh;
+    }
+    section#advice {
+        margin-bottom: 15rem;
+    }
+    footer .bande2 .item img {
+        width: 40px;
+    }
+    footer .bande2 .item p span:nth-child(1) {
+        font-size: 25px;
+    }
+}
+
+@media (max-width: 1024px) {
+    #menubar {
+        display: block;
+        font-size: 30px;
+    }
+    input[type="checkbox"]:checked~ul.menu-list {
+        display: flex;
+        right: 0;
+    }
+    nav.navbar ul.menu-list {
+        position: absolute;
+        flex-direction: column;
+        top: 70px;
+        right: 160px;
+        background: var(--color3);
+        width: 200px;
+        padding: 40px 44px 40px 20px;
+        align-items: flex-start;
+        right: calc(-200px - 44px - 40px);
+        transition: all 0.8s cubic-bezier(0.77, 0.2, 0.05, 1);
+    }
+    nav.navbar ul.submenu {
+        z-index: 9;
+        top: 50px;
+    }
+    div#google_translate_element,
+    nav.navbar a.tel {
+        display: none;
+    }
+    nav.navbar {
+        position: relative;
+        width: auto !important;
+        left: 0 !important;
+        transform: translate(0px) !important;
+        margin: 0 !important;
+        justify-content: space-between;
+        padding: 0 45px;
+        height: 70px;
+    }
+    header {
+        height: 50vh;
+    }
+    .banner {
+        height: auto;
+        padding: 0 10%;
+    }
+    .banner h1 {
+        font-size: 30px;
+    }
+    main .accroche {
+        top: 0px;
+        padding: 10% 0;
+    }
+    .banner p {
+        font-size: 16px;
+    }
+    header video {
+        height: 105%;
+    }
+    .title h2 {
+        font-size: 30px;
+        line-height: 1.3;
+    }
+    section#advice .title h2 {
+        font-size: 32px;
+    }
+    section#advice .twice {
+        padding: 0 5%;
+    }
+    section#package .container {
+        flex-wrap: wrap;
+        justify-content: center;
+        grid-gap: 40px;
+    }
+    .custom-package h4 {
+        font-size: 32px;
+    }
+    .custom-package {
+        grid-gap: 40px;
+    }
+    footer section:nth-child(1) {
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 0;
+    }
+    footer section:nth-child(1) .group {
+        padding: 40px 40px;
+    }
+    footer section:nth-child(1) .group:nth-child(1),
+    footer section:nth-child(1) .group:nth-child(2) {
+        border-bottom: 1px solid #ffffff45;
+    }
+    footer section:nth-child(1) .group:nth-child(2) {
+        border-right: none;
+    }
+    .service-list {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (max-width: 767px) {}
+
+@media (max-width: 576px) {
+    header {
+        background: url(../assets/banner-m.jpg);
+        background-size: cover;
+        background-position: right;
+    }
+    .banner {
+        padding: 0;
+    }
+    .banner p {
+        display: none;
+    }
+    .banner h1 {
+        font-size: 24px;
+        margin-bottom: 20px;
+    }
+    main .accroche {
+        flex-wrap: wrap;
+        padding: 10% 4%;
+        grid-gap: 20px;
+    }
+    section {
+        flex-wrap: wrap;
+    }
+    .text-bloc,
+    .img-bloc {
+        width: 100%;
+    }
+    .service-list {
+        grid-template-columns: 1fr;
+    }
+    section#steps .container {
+        flex-wrap: wrap;
+    }
+    section#advice .twice {
+        position: relative;
+        flex-wrap: wrap;
+    }
+    section#advice .title p {
+        font-size: 16px;
+    }
+    section#advice {
+        padding: 5% 0 20%;
+        margin-bottom: 0;
+    }
+    section#advice .title a.btn {
+        top: 35px;
+    }
+    section#advice .twice {
+        padding: 20% 5% 0;
+    }
+    section#package .container .package-item {
+        width: auto;
+    }
+    .custom-package {
+        flex-wrap: wrap;
+        grid-gap: 20px;
+        padding: auto;
+    }
+    .custom-package h4 {
+        font-size: 20px;
+    }
+    .slick-prev,
+    .slick-next {
+        top: 100% !important;
+    }
+    section#faq .filter {
+        width: 100%;
+    }
+    section#about,
+    section {
+        padding: 10% 5%;
+    }
+    section#package .container .package-item .price h4 {
+        font-size: 25px;
+    }
+    footer .bande1 {
+        padding: 10% 5%;
+    }
+    footer .bande2 {
+        flex-wrap: wrap;
+        padding: 5% 0;
+    }
+    footer .bande2 .item {
+        justify-content: flex-start;
+    }
+    footer .bande2 .item:nth-child(2) {
+        border: 1px solid #eeeeee4f;
+        border-left: none;
+        border-right: none;
+    }
+    footer .bande2 .item img {
+        width: 30px;
+    }
+    footer section:nth-child(1) {
+        grid-template-columns: 1fr;
+    }
+    footer section:nth-child(1) .group,
+    footer section:nth-child(1) .group:nth-child(1),
+    footer section:nth-child(1) .group:nth-child(2) {
+        border: 0;
+        padding: 20px 40px;
+        height: auto;
+    }
+    footer section:nth-child(2) {
+        justify-content: center;
+        grid-gap: 10px;
+        text-align: center;
+        font-size: 14px;
+    }
+    .img-area .slick-next {
+        right: 40%;
+    }
+    .img-area .slick-prev {
+        left: 40%;
+    }
+}
+
+@media (max-width: 320px) {}
